--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,24 @@ export_credentials.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+# Operating System specific ignores
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+.Spotlight-V100
+.Trashes
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+# Linux
+~
+.nfs
+
+# Build output
+build/
